--- a/index.html
+++ b/index.html
@@ -685,6 +685,10 @@
       </div>
     </div>
     <p class="footer-copy">&copy; 2025 Oxford Dental Limited t/a Oxford Dental. All rights reserved.</p>
+    <p class="footer-attribution" style="margin-top:8px; font-size:0.75rem; color:#b3d3df;">
+      Header image by <a href="https://commons.wikimedia.org/wiki/File:View_from_Mt_Oxford,_Oxford_Forest_Conservation_Area,_Canterbury,_New_Zealand.jpg" target="_blank" style="color:#b3d3df; text-decoration:underline;">Michal Klajban</a>,
+      <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank" style="color:#b3d3df; text-decoration:underline;">CC BY-SA 4.0</a>, via Wikimedia Commons
+    </p>
   </footer>
 
   <script>
