chore: wording changes

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <div class="services-grid">
       <div class="service-card">
         <h3>Fillings</h3>
-        <p>Modern, pain-free cavity treatments.</p>
+        <p>Minimally invasive treatment using conservative, comfortable techniques and appropriate materials</p>
       </div>
       <div class="service-card">
         <h3>Checkups</h3>
@@ -610,11 +610,11 @@
       </div>
       <div class="service-card">
         <h3>Hygiene Services</h3>
-        <p>Professional cleaning and personalized oral hygiene advice for a healthy smile.</p>
+        <p>Professional cleaning and personalised oral hygiene advice for a healthy smile.</p>
       </div>
       <div class="service-card">
         <h3>Teeth Whitening</h3>
-        <p>Safe and effective whitening treatments to brighten your teeth.</p>
+        <p>Safe and effective whitening treatments to brighten your smile.</p>
       </div>
     </div>
   </section>
@@ -628,10 +628,13 @@
       </div>
       <div class="about-text">
         <p>
-          At MySite Dental, we are dedicated to providing exceptional dental care in a friendly and welcoming environment. Our experienced team uses the latest technology and techniques to ensure your comfort and satisfaction.
+          We are here to serve Oxford and the surrounding area with general dental services. We are a team of people who truly love their work and are dedicated to serving our community and you. We love getting to know you, listening to your story, trying to understand what you need from us and how we can help you most.
         </p>
         <p>
-          Whether you need a routine checkup or advanced dental treatment, we are here to help you achieve a healthy, beautiful smile. We believe in personalized care and building long-lasting relationships with our patients.
+          We can provide you with urgent care and also general maintenance of your teeth and oral health. We welcome both teenagers using the free dental health scheme and younger children when referred by the school dental therapists. We can also help with ACC treatment and those who require funding help with WINZ.
+        </p>
+        <p>
+          We look forward to meeting you and answering your queries.
         </p>
       </div>
     </div>
@@ -665,14 +668,15 @@
       </div>
       <div class="footer-details">
         <p>
-          We are open Monday to Wednesday from 9:00 AM to 5:00 PM. Please contact us using the below information regarding appointments for times outside the general hours.
+          Opening hours by appointment.
         </p>
         <a target="_blank" href="https://maps.app.goo.gl/z7dqMovXbTgadvUTA">
           634 Bay Road, Oxford 7430
         </a>
         <p>
-          <a href="tel:+441234567890">+44 1234 567890</a><br>
-          <a href="mailto:info@oxforddental.co.nz">info@oxforddental.co.nz</a>
+          <a href="tel:+441234567890">021 273 6963</a><br>
+          <a href="tel:+441234567890">03 423 9424</a><br>
+          <a href="mailto:info@oxforddental.co.nz">reception@oxforddental.co.nz</a>
         </p>
       </div>
     </div>
