--- a/index.html
+++ b/index.html
@@ -433,10 +433,16 @@
       font-weight: 500;
       color: var(--dark-colour);
     }
-    .footer-copy {
+    .footer {
       margin-top: 32px;
+    }
+    .footer-paragraph {
       padding: 0 12px;
       font-size: 0.7rem;
+      color: var(--light-colour);
+      margin-top:8px; 
+    }
+    .footer-paragraph a {
       color: var(--light-colour);
     }
     @media (max-width: 600px) {
@@ -680,11 +686,15 @@
         </p>
       </div>
     </div>
-    <p class="footer-copy">&copy; 2025 Oxford Dental Limited t/a Oxford Dental. All rights reserved.</p>
-    <p class="footer-attribution" style="margin-top:8px; font-size:0.75rem; color:#b3d3df;">
-      Header image by <a href="https://commons.wikimedia.org/wiki/File:View_from_Mt_Oxford,_Oxford_Forest_Conservation_Area,_Canterbury,_New_Zealand.jpg" target="_blank" style="color:#b3d3df; text-decoration:underline;">Michal Klajban</a>,
-      <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank" style="color:#b3d3df; text-decoration:underline;">CC BY-SA 4.0</a>, via Wikimedia Commons
-    </p>
+    <div class="footer">
+      <p class="footer-paragraph">&copy; 2025 Oxford Dental Limited t/a Oxford Dental. All rights reserved.</p>
+      <p class="footer-paragraph">
+        Header image by <a href="https://commons.wikimedia.org/wiki/File:View_from_Mt_Oxford,_Oxford_Forest_Conservation_Area,_Canterbury,_New_Zealand.jpg" target="_blank" style="color:#b3d3df; text-decoration:underline;">Michal Klajban</a>,
+        <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank">CC BY-SA 4.0</a>, via Wikimedia Commons
+      </p>
+      <p class="footer-paragraph">Website by <a href="https://github.com/Gordei-Kuznetsov" target="_blank">GK</a></p>
+
+    </div>
   </footer>
 
   <script>
