--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         <p>
           Opening hours by appointment.
         </p>
-        <a target="_blank" href="https://maps.app.goo.gl/z7dqMovXbTgadvUTA">
+        <a target="_blank" href="https://maps.app.goo.gl/rwfAUJXQczVTcfFdA">
           634 Bay Road, Oxford 7430
         </a>
         <p>
