fix: phone numbers on main page

--- a/index-completed.html
+++ b/index-completed.html
@@ -680,8 +680,8 @@
           634 Bay Road, Oxford 7430
         </a>
         <p>
-          <a href="tel:+441234567890">021 273 6963</a><br>
-          <a href="tel:+441234567890">03 423 9424</a><br>
+          <a href="tel:+64212736963">+64 21 273 6963</a><br>
+          <a href="tel:+6434239424">+64 3 423 9424</a><br>
           <a href="mailto:info@oxforddental.co.nz">reception@oxforddental.co.nz</a>
         </p>
       </div>
