--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Oxford Dental provides professional dental care, checkups, and orthodontics in Oxford, NZ. Friendly, modern clinic for all ages. Book your appointment today!">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="all">
   <title>Oxford Dental</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
