--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Oxford Dental provides professional dental care, checkups, and orthodontics in Oxford, NZ. Friendly, modern clinic for all ages. Book your appointment today!">
+  <meta name="description" content="We are here to serve Oxford and the surrounding area with general dental services. We can provide you with urgent care and also general maintenance of your teeth and oral health.">
   <meta name="robots" content="all">
   <title>Oxford Dental</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
