--- a/index-completed.html
+++ b/index-completed.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="all">
   <title>Oxford Dental</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="favicon.ico">
   <style>
     :root {
       --main-colour: #486f9b;
