--- a/index.html
+++ b/index.html
@@ -33,6 +33,61 @@
       background: var(--white);
     }
 
+    /* Navigation Bar */
+    .navbar {
+      display: flex;
+      align-items: center;
+      background: transparent;
+      padding: 0 5vw;
+      height: 64px;
+      justify-content: space-between;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+    .navbar.scrolled {
+      background: var(--main-colour);
+      transition: background 0.25s;
+    }
+
+    .navbar .logo {
+      display: flex;
+      align-items: center;
+      margin-right: 0;
+      margin-left: 16px;
+    }
+
+    .navbar .logo img {
+      height: 45px;
+      margin-right: 12px;
+    }
+
+    .navbar .nav-links {
+      display: flex;
+      gap: 3vw;
+      margin-right: 16px;
+    }
+
+    .navbar .nav-links a {
+      color: var(--white);
+      text-decoration: none;
+      font-size: 1rem;
+      font-weight: bold;
+      transition: color 0.2s;
+    }
+
+    .navbar .nav-links a:hover {
+      color: var(--dark-colour);
+    }
+
+    @media (max-width: 600px) {
+      .navbar .nav-links {
+        display: none;
+      }
+    }
+
     /* Banner Section */
     .banner {
       position: relative;
@@ -63,7 +118,7 @@
       flex-direction: column; 
       align-items: center; 
       justify-content: center; 
-      gap: 12px; 
+      gap: 32px; 
       width: 100%;
     }
 
@@ -73,11 +128,22 @@
       height: auto;
     }
 
-    .banner-header {
+    .banner-content .booking-button {
+      padding: 12px 32px;
+      font-size: 1rem;
+      background: var(--main-colour);
       color: var(--white);
-      font-size: 2.2rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
       font-weight: bold;
-      letter-spacing: 1px;
+      transition: background 0.2s;
+      text-decoration: none;
+      /* display: none; */
+    }
+
+    .banner-content .booking-button:hover {
+      background: var(--dark-colour);
     }
 
     .banner .banner-shadow {
@@ -88,8 +154,258 @@
       transform: translate(-50%, -50%);
       height: 60%;
       width: 90%;
-      background: radial-gradient(#0000009e 12%, #ffffff00 70%);
+      background: radial-gradient(#0000007d 12%, #ffffff00 70%);
       pointer-events: none;
+    }
+
+    /* Our Services Section */
+    .services-section {
+      background: var(--white);
+      padding: 64px 0 64px 0;
+      scroll-margin-block-start: 64px;
+    }
+    .services-title {
+      text-align: center;
+      font-size: 2rem;
+      color: var(--main-colour);
+      margin-bottom: 40px;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 32px;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 32px;
+    }
+    .service-card {
+      background: var(--super-light);
+      border-radius: 6px;
+      box-shadow: 0 2px 12px rgba(26,35,126,0.07);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 36px 20px 28px 20px;
+      text-align: center;
+      transition: box-shadow 0.2s;
+    }
+    .service-card h3 {
+      font-size: 1.2rem;
+      color: var(--dark-colour);
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+    .service-card p {
+      font-size: 1rem;
+      color: var(--text-colour);
+    }
+    @media (max-width: 900px) {
+      .services-grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3, 1fr);
+      }
+    }
+    @media (max-width: 600px) {
+      .services-section {
+        padding: 32px 0;
+        scroll-margin-block-start: 32px;
+      }
+      .services-title {
+        font-size: 1.3rem;
+        margin-bottom: 24px;
+      }
+      .services-grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: none;
+        gap: 20px;
+        padding: 0 10px;
+      }
+      .service-card {
+        padding: 24px 10px 18px 10px;
+      }
+    }
+
+    /* About Us Section */
+    .about-section {
+      background: var(--super-light);
+      padding: 64px 0;
+      scroll-margin-block-start: 64px;
+    }
+    .about-title {
+      text-align: center;
+      font-size: 2rem;
+      color: var(--dark-colour);
+      margin-bottom: 40px;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    .about-content {
+      display: flex;
+      max-width: 1100px;
+      margin: 0 auto;
+      align-items: center;
+      gap: 48px;
+      padding: 0 32px;
+    }
+    .about-image img {
+      width: 320px;
+      max-width: 100%;
+      border-radius: 6px;
+      box-shadow: 0 4px 24px rgba(26,35,126,0.10);
+      display: block;
+    }
+    .about-text {
+      flex: 1;
+      font-size: 1.1rem;
+      color: var(--text-colour);
+      line-height: 1.7;
+    }
+    @media (max-width: 900px) {
+      .about-content {
+        flex-direction: column;
+        gap: 24px;
+        text-align: center;
+      }
+      .about-image img {
+        margin: 0 auto;
+      }
+    }
+    @media (max-width: 600px) {
+      .about-section {
+        padding: 32px 0;
+        scroll-margin-block-start: 32px;
+      }
+      .about-title {
+        font-size: 1.3rem;
+        margin-bottom: 24px;
+      }
+      .about-content {
+        padding: 0 10px;
+      }
+      .about-text {
+        font-size: 1rem;
+      }
+    }
+
+    /* Our Facilities Section */
+    .facilities-section {
+      background: var(--white);
+      padding: 64px 0;
+      scroll-margin-block-start: 64px;
+    }
+    .facilities-title {
+      text-align: center;
+      font-size: 2rem;
+      color: var(--main-colour);
+      margin-bottom: 18px;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    .facilities-desc {
+      text-align: center;
+      color: var(--text-colour);
+      font-size: 1.1rem;
+      margin-bottom: 36px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .facilities-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 24px;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 32px;
+    }
+    .facilities-grid img {
+      width: 100%;
+      aspect-ratio: 4/3;
+      object-fit: cover;
+      border-radius: 6px;
+      box-shadow: 0 2px 12px rgba(26,35,126,0.07);
+      transition: transform 0.2s, box-shadow 0.2s;
+      background: var(--white);
+      display: block;
+      cursor: pointer;
+    }
+    .zoom-overlay {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.5);
+      z-index: 1999;
+      cursor: zoom-out;
+    }
+    .zoomed-img {
+      z-index: 2000;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      max-width: 90vw;
+      max-height: 90vh;
+      width: 55%;
+      height: auto;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 8px 40px rgba(26,35,126,0.25);
+      background: var(--white);
+      border-radius: 6px;
+      transition: none;
+      display: block;
+      object-fit: contain;
+    }
+    @media (max-width: 900px) {
+      .facilities-grid {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+    @media (max-width: 600px) {
+      .facilities-section {
+        padding: 32px 0;
+        scroll-margin-block-start: 32px;
+      }
+      .facilities-title {
+        font-size: 1.3rem;
+        margin-bottom: 12px;
+      }
+      .facilities-desc {
+        font-size: 1rem;
+        margin-bottom: 18px;
+      }
+      .facilities-grid {
+        grid-template-columns: 1fr;
+        gap: 14px;
+        padding: 0 10px;
+      }
+    }
+
+    /* Responsive adjustments for banner and navbar */
+    @media (max-width: 600px) {
+      .navbar {
+        flex-direction: column;
+        height: auto;
+        padding: 16px;
+      }
+      .navbar .nav-links {
+        flex-direction: column;
+        gap: 12px;
+        margin-top: 8px;
+      }
+      .banner {
+        height: 600px;
+      }
+      .banner-content {
+        padding: 20px 10px 16px 10px;
+      }
+      .banner-content h1 {
+        font-size: 1.3rem;
+      }
+      .banner-content h2 {
+        font-size: 1rem;
+      }
     }
 
     /* Footer / Contact Us Section */
@@ -253,14 +569,111 @@
   </style>
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <div class="logo">
+      <img src="logo.svg" alt="Logo">
+    </div>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#facilities">Facilities</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+
   <!-- Banner Section -->
   <section class="banner" id="banner">
     <span class="banner-shadow"></span>
     <div class="banner-content">
       <div class="banner-content-box">
         <img class="big-logo" src="big-logo.svg" alt="MySite Logo">
-        <h2 class="banner-header">Opening Soon</h2>
+        <a href="https://apac.dentalhub.online/soe/new?pid=NZOXF01" class="booking-button">Book Appointment</a>
       </div>
+    </div>
+  </section>
+
+  <!-- Our Services Section -->
+  <section class="services-section" id="services">
+    <h2 class="services-title">Our Services</h2>
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>Fillings</h3>
+        <p>Minimally invasive treatment using conservative, comfortable techniques and appropriate materials</p>
+      </div>
+      <div class="service-card">
+        <h3>Checkups</h3>
+        <p>Comprehensive exams for all ages.</p>
+      </div>
+      <div class="service-card">
+        <h3>Tooth Extractions</h3>
+        <p>Gentle and safe removal of problematic teeth for your oral health.</p>
+      </div>
+      <div class="service-card">
+        <h3>Dental X-Rays</h3>
+        <p>Advanced digital X-rays for accurate diagnosis and treatment planning.</p>
+      </div>
+      <div class="service-card">
+        <h3>Hygiene Services</h3>
+        <p>Professional cleaning and personalised oral hygiene advice for a healthy smile.</p>
+      </div>
+      <div class="service-card">
+        <h3>Teeth Whitening</h3>
+        <p>Safe and effective whitening treatments to brighten your smile.</p>
+      </div>
+      <div class="service-card">
+        <h3>Work and Income</h3>
+        <p>We are a registered WINZ provider.</p>
+      </div>
+      <div class="service-card">
+        <h3>ACC</h3>
+        <p>We are registered with ACC and can provide services covered by them.</p>
+      </div>
+      <div class="service-card">
+        <h3>Children and Adolescents Care</h3>
+        <p>We provide free dental care for children from year 9 school age to 18 years old.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Us Section -->
+  <section class="about-section" id="about">
+    <h2 class="about-title">About Us</h2>
+    <div class="about-content">
+      <div class="about-image">
+        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=600&q=80" alt="About Us Team">
+      </div>
+      <div class="about-text">
+        <p>
+          We are here to serve Oxford and the surrounding area with general dental services. We are a team of people who truly love their work and are dedicated to serving our community and you. We love getting to know you, listening to your story, trying to understand what you need from us and how we can help you most.
+        </p>
+        <p>
+          We can provide you with urgent care and also general maintenance of your teeth and oral health. We welcome both teenagers using the free dental health scheme and younger children when referred by the school dental therapists. We can also help with ACC treatment and those who require funding help with WINZ.
+        </p>
+        <p>
+          We look forward to meeting you and answering your queries.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Our Facilities Section -->
+  <section class="facilities-section" id="facilities">
+    <h2 class="facilities-title">Our Facilities</h2>
+    <p class="facilities-desc">
+      Explore our modern, comfortable, and fully equipped dental facilities designed for your care and comfort.
+    </p>
+    <div class="facilities-grid">
+      <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="Facility 1">
+      <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Facility 2">
+      <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Facility 3">
+      <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=400&q=80" alt="Facility 4">
+      <img src="https://images.unsplash.com/photo-1520880867055-1e30d1cb001c?auto=format&fit=crop&w=400&q=80" alt="Facility 5">
+      <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?auto=format&fit=crop&w=400&q=80" alt="Facility 6">
+      <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80" alt="Facility 7">
+      <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80" alt="Facility 8">
+      <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=400&q=80" alt="Facility 9">
     </div>
   </section>
 
@@ -275,9 +688,11 @@
         <p>
           Opening hours by appointment.
         </p>
-        <a target="_blank" href="https://maps.app.goo.gl/rwfAUJXQczVTcfFdA">
-          634 Bay Road, Oxford 7430
-        </a>
+        <p>
+          <a target="_blank" href="https://maps.app.goo.gl/rwfAUJXQczVTcfFdA">
+            634 Bay Road, Oxford 7430
+          </a>
+        </p>
         <p>
           <a href="tel:+64212736963">+64 21 273 6963</a><br>
           <a href="tel:+6434239424">+64 3 423 9424</a><br>
@@ -288,12 +703,59 @@
     <div class="footer">
       <p class="footer-paragraph">&copy; 2025 Oxford Dental Limited t/a Oxford Dental. All rights reserved.</p>
       <p class="footer-paragraph">
-        Header image by <a href="https://commons.wikimedia.org/wiki/File:View_from_Mt_Oxford,_Oxford_Forest_Conservation_Area,_Canterbury,_New_Zealand.jpg" target="_blank" style="color:#b3d3df; text-decoration:underline;">Michal Klajban</a>,
+        Header image by <a href="https://commons.wikimedia.org/wiki/File:View_from_Mt_Oxford,_Oxford_Forest_Conservation_Area,_Canterbury,_New_Zealand.jpg" target="_blank">Michal Klajban</a>,
         <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank">CC BY-SA 4.0</a>, via Wikimedia Commons
       </p>
       <p class="footer-paragraph">Website by <a href="https://github.com/Gordei-Kuznetsov" target="_blank">GK</a></p>
 
     </div>
   </footer>
+
+  <script>
+    // Navbar transparency on scroll
+    window.addEventListener('scroll', function () {
+      const navbar = document.querySelector('.navbar');
+      if (!navbar) return;
+      if (window.scrollY > 150) {
+        navbar.classList.add('scrolled');
+      } else {
+        navbar.classList.remove('scrolled');
+      }
+    });
+
+    // Zoom in on facilities image on click
+    document.querySelectorAll('.facilities-grid img').forEach(function(img) {
+      img.addEventListener('click', function () {
+        // Prevent multiple zooms
+        if (document.querySelector('.zoom-overlay')) return;
+
+        // Prevent page scroll
+        document.body.style.overflow = 'hidden';
+
+        // Create overlay
+        const overlay = document.createElement('div');
+        overlay.className = 'zoom-overlay';
+        document.body.appendChild(overlay);
+
+        // Create zoomed image copy
+        const zoomedImg = document.createElement('img');
+        zoomedImg.src = img.src;
+        zoomedImg.alt = img.alt;
+        zoomedImg.className = 'zoomed-img';
+        document.body.appendChild(zoomedImg);
+
+        // Remove zoom on overlay or zoomed image click
+        function removeZoom() {
+          zoomedImg.remove();
+          overlay.remove();
+          document.body.style.overflow = ''; // Restore scroll
+          overlay.removeEventListener('click', removeZoom);
+          zoomedImg.removeEventListener('click', removeZoom);
+        }
+        overlay.addEventListener('click', removeZoom);
+        zoomedImg.addEventListener('click', removeZoom);
+      });
+    });
+  </script>
 </body>
 </html>
