chore: update about us image; phone number prefix

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
     <h2 class="about-title">About Us</h2>
     <div class="about-content">
       <div class="about-image">
-        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=600&q=80" alt="About Us Team">
+        <img src="entrance-view.jpg" alt="About Us Team">
       </div>
       <div class="about-text">
         <p>
@@ -707,8 +707,8 @@
           </a>
         </p>
         <p>
-          <a href="tel:+64212736963">+64 21 273 6963</a><br>
-          <a href="tel:+6434239424">+64 3 423 9424</a><br>
+          <a href="tel:0212736963">021 273 6963</a><br>
+          <a href="tel:034239424">03 423 9424</a><br>
           <a href="mailto:info@oxforddental.co.nz">reception@oxforddental.co.nz</a>
         </p>
       </div>
