fix: email link

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
         <p>
           <a href="tel:0212736963">021 273 6963</a><br>
           <a href="tel:034239424">03 423 9424</a><br>
-          <a href="mailto:info@oxforddental.co.nz">reception@oxforddental.co.nz</a>
+          <a href="mailto:reception@oxforddental.co.nz">reception@oxforddental.co.nz</a>
         </p>
       </div>
     </div>
