chore: update about us photo

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
     <h2 class="about-title">About Us</h2>
     <div class="about-content">
       <div class="about-image">
-        <img src="entrance-view.jpg" alt="About Us Team">
+        <img src="about-us.jpeg" alt="About Us Team">
       </div>
       <div class="about-text">
         <p>
