chore: add more services, change wording, add Facebook link

--- a/index.html
+++ b/index.html
@@ -498,6 +498,17 @@
       margin-bottom: 4px;
       font-size: 1.08rem;
     }
+    .footer-details .social-media {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      margin-top: 8px;
+    }
+    .footer-details img.social-media-imgage {
+      max-width: 30px;
+      height: 30px;
+      display: block;
+    }
     @media (max-width: 600px) {
       .opening-hours {
         font-size: 1rem;
@@ -631,7 +642,7 @@
       </div>
       <div class="service-card">
         <h3>Checkups</h3>
-        <p>Comprehensive exams for all ages.</p>
+        <p>We offer comprehensive examaminations for all ages.</p>
       </div>
       <div class="service-card">
         <h3>Tooth Extractions</h3>
@@ -639,15 +650,27 @@
       </div>
       <div class="service-card">
         <h3>Dental X-Rays</h3>
-        <p>Advanced digital X-rays for accurate diagnosis and treatment planning.</p>
+        <p>Intraoral and OPG full mouth X-rays for accurate diagnosis and treatment planning.</p>
       </div>
       <div class="service-card">
         <h3>Hygiene Services</h3>
-        <p>Professional cleaning and personalised oral hygiene advice for a healthy smile.</p>
+        <p>Professional cleaning including EMS Air-flow therapy and personalised oral hygiene advice.</p>
       </div>
       <div class="service-card">
         <h3>Teeth Whitening</h3>
         <p>Safe and effective whitening treatments to brighten your smile.</p>
+      </div>
+      <div class="service-card">
+        <h3>Crowns</h3>
+        <p>We offer crowns which are whole tooth restorations that completely surround damaged teeth or dental implants.</p>
+      </div>
+      <div class="service-card">
+        <h3>High School Care</h3>
+        <p>We provide free dental care for children from year 9 school age until before 18 years old.</p>
+      </div>
+      <div class="service-card">
+        <h3>Child referrals</h3>
+        <p>We provide care for children with school dental therapists referrals</p>
       </div>
       <div class="service-card">
         <h3>Work and Income</h3>
@@ -658,8 +681,8 @@
         <p>We are registered with ACC and can provide services covered by them.</p>
       </div>
       <div class="service-card">
-        <h3>Children and Adolescents Care</h3>
-        <p>We provide free dental care for children from year 9 school age to 18 years old.</p>
+        <h3>Southern Cross</h3>
+        <p>We are an affiliated provider for Southern Cross Insurance</p>
       </div>
     </div>
   </section>
@@ -680,6 +703,11 @@
         </p>
         <p>
           We look forward to meeting you and answering your queries.
+        </p>
+        <p>
+          <i>
+            Dr Yvonne Vannoort, BDS
+          </i>
         </p>
       </div>
     </div>
@@ -711,6 +739,14 @@
           <a href="tel:034239424">03 423 9424</a><br>
           <a href="mailto:reception@oxforddental.co.nz">reception@oxforddental.co.nz</a>
         </p>
+        <div class="social-media">
+          <img src="Facebook_logo.png" class="social-media-imgage" alt="Facebook">
+          <p>
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=61580931934113">
+              Please follow us on Facebook
+            </a>
+          </p>
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -720,7 +756,6 @@
         <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank">CC BY-SA 4.0</a>, via Wikimedia Commons
       </p>
       <p class="footer-paragraph">Website by <a href="https://github.com/Gordei-Kuznetsov" target="_blank">GK</a></p>
-
     </div>
   </footer>
 
